--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,10 @@ body {
  .cds-loading-spinner > circle {
 	 fill: none;
 	 stroke-width: 8;
+	 stroke-dasharray: 270;
+	 stroke-dashoffset: 0;
 	 transform-origin: center;
+	 stroke: #79b700;
 	 animation: dash 1.5s ease-in-out infinite, colors 3s ease-in-out infinite;
 }
  .cds-loading-spinner {
