--- a/src/styles.css
+++ b/src/styles.css
@@ -15,35 +15,47 @@ body {
 	 z-index: 8000;
 }
 /* ----Loading spinner--- */
- .cds-loading-spinner > circle {
-	 fill: none;
-	 stroke-width: 8;
-	 stroke-dasharray: 270;
-	 stroke-dashoffset: 0;
-	 transform-origin: center;
-	 stroke: #79b700;
-	 animation: dash 1.5s ease-in-out infinite, colors 3s ease-in-out infinite;
-}
  .cds-loading-spinner {
 	 display: block;
+	 width: 80px;
+	 height: 80px;
+	 border-radius: 100%;
+	 position: relative;
 	 margin: auto;
-	 width: 88px;
-	 height: 88px;
-	 stroke-linecap: round;
-	 stroke-width: 8px;
-	 r: 44px;
-	 animation: rotate 1.5s linear infinite;
+	 border: 8px solid #79b700;
+	 border-top: 8px solid #fff;
+	 -webkit-animation: spin 0.8s linear infinite;
+	 -ms-animation: spin 0.8s linear infinite;
+	 -o-animation: spin 0.8s linear infinite;
+	 animation: spin 0.8s linear infinite;
 }
  .cds-loading-spinner.-sm {
-	 display: inline;
-	 margin: 0;
-	 width: 24px;
-	 height: 24px;
+	 display: inline-block;
+	 margin: 0.5rem;
+	 width: 14px;
+	 height: 14px;
+	 border: 3px solid rgba(121, 183, 0, 0.5);
+	 border-top: 3px solid #79b700;
 }
- .cds-loading-spinner.-sm circle {
-	 stroke-dasharray: 270;
-	 stroke-width: 12px;
-	 r: 36px;
+ @keyframes spin {
+	 0% {
+		 -webkit-transform: rotate(0deg);
+		 -ms-transform: rotate(0deg);
+		 -o-transform: rotate(0deg);
+		 transform: rotate(0deg);
+	}
+	 50% {
+		 -webkit-transform: rotate(135deg);
+		 -ms-transform: rotate(135deg);
+		 -o-transform: rotate(135deg);
+		 transform: rotate(135deg);
+	}
+	 100% {
+		 -webkit-transform: rotate(360deg);
+		 -ms-transform: rotate(360deg);
+		 -o-transform: rotate(360deg);
+		 transform: rotate(360deg);
+	}
 }
  @keyframes rotate {
 	 0% {
@@ -104,3 +116,4 @@ body {
 	 color: #3a3a3a;
 	 margin-top: 0.5rem;
 }
+ 
