--- a/src/styles.css
+++ b/src/styles.css
@@ -16,18 +16,18 @@ body {
 }
 /* ----Loading spinner--- */
  .cds-loading-spinner {
-	 display: block;
+	 display: inline-block;
 	 width: 80px;
 	 height: 80px;
 	 border-radius: 100%;
 	 position: relative;
-	 margin: auto;
 	 border: 8px solid #79b700;
 	 border-top: 8px solid #fff;
-	 -webkit-animation: spin 0.8s linear infinite;
-	 -ms-animation: spin 0.8s linear infinite;
-	 -o-animation: spin 0.8s linear infinite;
-	 animation: spin 0.8s linear infinite;
+	 animation-name: spin;
+	 animation-duration: 0.8s;
+	 animation-timing-function: linear;
+	 animation-fill-mode: forwards;
+	 animation-iteration-count: infinite;
 }
  .cds-loading-spinner.-sm {
 	 display: inline-block;
@@ -57,44 +57,11 @@ body {
 		 transform: rotate(360deg);
 	}
 }
- @keyframes rotate {
-	 0% {
-		 transform: rotate(0deg);
-	}
-	 100% {
-		 transform: rotate(270deg);
-	}
-}
- @keyframes colors {
-	 0% {
-		 stroke: #79b700;
-	}
-	 10% {
-		 stroke: #c9e299;
-	}
-	 100% {
-		 stroke: #79b700;
-	}
-}
- @keyframes dash {
-	 0% {
-		 stroke-dashoffset: 266;
-	}
-	 50% {
-		 stroke-dashoffset: 66.5;
-		 transform: rotate(135deg);
-	}
-	 100% {
-		 stroke-dashoffset: 266;
-		 transform: rotate(450deg);
-	}
-}
 /* ----Loading elements horizontal alignment--- */
  .cds-loading {
 	 display: flex;
-	 justify-content: center;
-	 align-content: center;
 	 flex-direction: column;
+	 align-items: center;
 	 text-align: center;
 	 padding: 3rem;
 }
